pac/k8s/net/dockerdclm-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --file docker-compose.yml -o pac/k8s/net --volumes
      hostPath
    kompose.version: 1.17.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: dockerdclm-api
  name: dockerdclm-api
spec:
  ports:
  - name: "5000"
    port: 5000
    targetPort: 80
  selector:
    io.kompose.service: dockerdclm-api
status:
  loadBalancer: {}
