pac/k8s/net/pgadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --file docker-compose.yml -o pac/k8s/net --volumes
      hostPath
    kompose.version: 1.17.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: pgadmin
  name: pgadmin
spec:
  ports:
  - name: "5050"
    port: 5050
    targetPort: 5050
  selector:
    io.kompose.service: pgadmin
status:
  loadBalancer: {}
