pac/k8s/net/dclm-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: dclm-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/dclm-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/dclm-network: "true"
